@@ -1,3 +1,7 @@
+Oct 1, 2007
+
+ * ADDED: http_stop_server/2 to stop a running HTTP server.
+
 Sep 26, 2007
 
  * ADDED: http_set_authorization/2 in library(http/http_open) to provide
